--- a/vitrales-english.html
+++ b/vitrales-english.html
@@ -13,8 +13,8 @@
 
 		<title>The Stained Glass Windows of St Paul’s</title>
 		<!-- code from https://gist.github.com/pgr86/2420594 W3schools.com and others-->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-		
+		<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		-->
 	
 		
 		
@@ -94,7 +94,7 @@ p {
 	<body>
 		<a name="vitrales"></a>
 	
-			<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+			<h3><a href="index.html">&#9664 Table of contents</a></h3>
 <h3><a style="float:right" href="vitrales.html">Español</a></h3>
 <br>
 	<br>
@@ -568,23 +568,23 @@ No visible signature: possibly attributed to Lavers & Westlake
 	
 
 <br>
-Images :<a href="http://www.espaciotransparente.cl/">  EspacioTransparente   </a>
+Images :<a href="http://www.espaciotransparente.cl/">  Espacio Transparente   </a>
 <br><br>
 
 </div></div>
 
 
 	
-	<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+	<h3><a href="index.html">&#9664 Table of Contents</a></h3>
 
 	
 </div><!--container-->
-
+<!--
   
 		<script src="js/vitrales.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>  
