--- a/vitrales.html
+++ b/vitrales.html
@@ -13,8 +13,8 @@
 
 		<title>Vitrales de St Paul’s</title>
 		<!-- code from https://gist.github.com/pgr86/2420594 W3schools.com and others-->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-		
+	<!--	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		-->
 	
 		
 		
@@ -594,7 +594,7 @@ Sin firma visible: posible atribución a Lavers & Westlake
 	
 
 <br>
-Imágenes :<a href="http://www.espaciotransparente.cl/">  EspacioTransparente   </a>
+Imágenes :<a href="http://www.espaciotransparente.cl/">  Espacio Transparente   </a>
 <br><br>
 
 </div></div>
@@ -605,12 +605,12 @@ href="index.html#1">&#9664 Tabla de contenido</a></h3>
 	
 	
 </div><!--container-->
-
+<!--
   
 		<script src="js/vitrales.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+--><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>  
