update lloyd-railway.html added about section

--- a/lloyd-railway.html
+++ b/lloyd-railway.html
@@ -562,14 +562,16 @@ pg. 208 VISIT TO CALIFORNIA AND ARIZONA, 1887.
 
 
 <hr id="section2">
-<a href="#19">HOME - 19</a>
+<a href="#19">HOME - 19</a><br>
 <!--
 pg. 208 VISIT TO CALIFORNIA AND ARIZONA, 1887.
 -->
 
-<br><br>
 <br>
-
+<br>
+<hr>
+<hr>
+<a href="#20">About</a>
 
 <a href="#section1" style="float:left;text-align:left;position:fixed;left:5px;bottom:5px;font-size:1.2em;">&#9650</a>
 <!--
@@ -3079,16 +3081,88 @@ Staying on board the night, I proceeded to London the next day at the rate of fo
 </p>
  
 
+<br>
+<hr>
+<hr>
+	<br>
+	<br>
+	<br><br>
+	<br>
+	<br>
+	<br><br>
+	<br>
+	<br>
+	<br><br>
+<span style="background-color: #717f7f;  color:white;
+	opacity: 0.6; z-index:3; font-family:monospace; font-size:0.9em; ">
+<a name="20"></a>
+<h5>About this digital edition:</h5>
+
+
+	<br>
+
+This online book was made using material scanned and digitized by Google.
+<br>
+You can find more information about their project here:
+
+<br>
+  <a href="https://en.wikipedia.org/wiki/Google_Books">Google Books on Wikipedia</a><br>
 
 
 
 
+<br>
+
+<!--See other formats<br>
+Google <br>
+-->
+<div style="padding: 70px; color:#4c4844;
+	opacity: 0.6; z-index:3; font-family:monospace; font-size:1em; background-color:#fcf1e3; font-size:0.8em;  "
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+"This is a digital copy of a book that was preserved for generations on library shelves before it was carefully scanned by Google as part of a project
+
+to make the world's books discoverable online.
+
+It has survived long enough for the copyright to expire and the book to enter the public domain. A public domain book is one that was never subject 
+
+to copyright or whose legal copyright term has expired. Whether a book is in the public domain may vary country to country. Public domain books
+
+are our gateways to the past, representing a wealth of history, culture and knowledge that's often difficult to discover. 
+
+Marks, notations and other maiginalia present in the original volume will appear in this file - a reminder of this book's long journey from the 
+
+publisher to a library and finally to you."
+</div>
+
+
+
+
+<br>
+
+<br>
+
+
+
+The original manuscript of "A Railway Pioneer: Notes by a Civil Engineer in Europe and America from 1838 to 1888" can be found here:<br>
+  <a href="https://archive.org/details/arailwaypioneer00lloygoog">Internet Archive</a><br>
+      <a href="https://catalog.hathitrust.org/Record/100153830">Hathi Trust</a>
+
+<br><br>
+</div> 
+ 
+ <br>
+	<br>
+	<br><br>
+	<br>
+	<br>
+	<br><br>
+	<br>
+	<br>
+	<br><br>
  
  
  
- 
- 
- 
+ <!--
  
  
  
@@ -3098,6 +3172,6 @@ Staying on board the night, I proceeded to London the next day at the rate of fo
       <p class="illus">
         <img src="images/whlloyd/book/images/picture41.jpg" alt="picture41"/>
       </p>
-      
+     --> 
       <a href="#top" style="float:right;text-align:right;position:fixed;right:5px;bottom:5px;font-size:1.5em;">&#9650</a>
     </div>
