--- a/lloyd-railway.html
+++ b/lloyd-railway.html
@@ -718,10 +718,12 @@ display:block;
 Baines and Scarsbrook, Printers, 
 Fairfax Road, N.W. 
 
-      1900<br>
+      1900<br><!--
       <a href="https://archive.org/details/arailwaypioneer00lloygoog">Internet Archive</a><br>
       <a href="https://catalog.hathitrust.org/Record/100153830">Hathi Trust</a>
-    </font>
+   -->
+   <br>
+   <br> </font>
       
       </h3>
 		  	
