--- a/lloyd-railway.html
+++ b/lloyd-railway.html
@@ -665,7 +665,6 @@ display:block;
 
 </style>
 <br>
-	
 <!--<body class="background two">-->
 <body style="background-color:#808080">
  <div style="width:90%; float:right; font-family:serif; font-size:1.2em">
@@ -3176,4 +3175,7 @@ The original manuscript of "A Railway Pioneer: Notes by a Civil Engineer in Euro
       </p>
      --> 
       <a href="#top" style="float:right;text-align:right;position:fixed;right:5px;bottom:5px;font-size:1.5em;">&#9650</a>
+     <!-- 
+      	<a style="position:fixed; top:0px; right:5px;font-size:1.5em;" title="Return to Resource Library" href="resource-library.html">■</a>
+-->
     </div>
