--- a/resource-library.html
+++ b/resource-library.html
@@ -1,7 +1,32 @@
 <!DOCTYPE html>  
 <html>  
 	<head> 
+		<style>
 		
+		.test {
+  margin: 0px;
+  border: 0px solid #ccc;
+  width: 2000px;
+  height: 1060px;
+   position:fixed;
+   left:0px;
+  background-image: url(images/jmarsh/17_1000_vista-a-la-cordillera-desde-cerro-alegre.jpg) ;
+  background-size: 110% 110%;
+  background-repeat: repeat;
+ /* background-size: cover;
+*/
+}
+.one {
+  background-position: right -100px top 0px;
+  
+}
+
+
+
+		</style>
+		
+		
+
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
@@ -81,29 +106,10 @@
 
 
 
+</style>
+	
 
 
-.test {
-  margin: 0px;
-  border: 0px solid #ccc;
-  width: 2000px;
-  height: 1060px;
-   position:fixed;
-   left:0px;
-  background-image: url(images/jmarsh/17_1000_vista-a-la-cordillera-desde-cerro-alegre.jpg) ;
-  background-size: 110% 110%;
-  background-repeat: repeat;
- /* background-size: cover;
-*/
-}
-.one {
-  background-position: right -100px top 0px;
-  
-}
-
-
-
-		</style>
 	
 	
 	<style>
