added nav links

--- a/quotations.html
+++ b/quotations.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>  
 <html>  
 	<head> 
-		
+		<h2 style="display:inline; position:fixed;top:0px;left:5px;z-index:25;">
+			<a style="" href="resource-library.html" title="Resource Library">&#9664</a></h2>	
+
+
+
+
+
+
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
@@ -77,6 +84,23 @@
         height: auto !important;
     }
 }
+
+
+
+
+/*
+a
+{
+	color:black;
+	}
+
+a:hover {
+	color:white; 
+		background-color:powderblue;
+			
+	}
+	*/
+	
 		</style>
 		
 
@@ -115,9 +139,11 @@ instead of numbered?
 
 -->
 <!-- some are date published-->
-<div class="example" style="height:100%; width:32%; float:left; position:fixed; left:3px; word-break: break-all; overflow:scroll; text-align:left;" >
+<div class="example" style="margin-top:30px;height:100%; width:32%; float:left; position:fixed; left:3px; word-break: break-all; overflow:scroll; text-align:left;" >
 <span style="background-color: white; 
 	opacity: 0.8; z-index:1; ">
+	
+	
 <a href="#1">1. 1578</a><br>
 <a href="#2">2. July 23, 1834</a>
 <br><a href="#3">3. 1826</a>
