--- a/disidentes.html
+++ b/disidentes.html
@@ -2,6 +2,13 @@
 <html>  
 	<head> 
 		
+<h2 style="display:inline; position:fixed;top:0px;left:5px;z-index:25;">
+			<a style="" href="resource-library.html" title="Resource Library">&#9664</a></h2>	
+
+
+
+
+
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
