--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@ historical-information.html">Historical Information</a>
 
 
 	<br><br>
+	
+	
+		<a href = "
+resource-library.html">Resource Library</a>
+
+
+	<br><br>
 <a href="vitrales.html">Vitrales</a>
 
 <br><br><!--
