--- a/lloyd-railway.html
+++ b/lloyd-railway.html
@@ -1,12 +1,4 @@
-
-
-
-
-
-
-
-
-
+	
 
 
 
@@ -222,7 +214,7 @@ n- <br>
 		
 	
 
-<a name="top"></a>
+
 <!--
 	<h3><a href="index.html" title="Volver">&#9664 Tabla de contenido</a></h3>
 
@@ -370,13 +362,17 @@ margin-left:30px;
 		
 		
 		</style>  	
+			<h2 style="display:inline; position:fixed;top:0px;left:5px;z-index:25;">
+			<a style="" href="resource-library.html" title="Resource Library">&#9664</a></h2>	
+
+
 
 <div class="test one" style="height:100%; max-width:100%;" ></div>
 <div class="FadeAway"></div>
 
 
 
-<a name="top" ></a> 
+
 <!-- How to not break links when adding new items?
 give them unique id using date-author?
 instead of numbered?
@@ -395,8 +391,8 @@ break-all; -->
 
 <span style="background-color: #717f7f; 
 	opacity: 0.6; z-index:3; font-family:monospace; font-size:1.2em; ">
-	
-	<a href="#section2" style="float:left;text-align:left;position:fixed;left:5px;top:5px;font-size:1.2em;">&#9660</a>
+	<br>
+	<a href="#section2" style="float:left;text-align:left;position:fixed;top:30px;left:5px;font-size:2em;">&#9660</a>
 	<!--
 	9660	25BC	 	BLACK DOWN-POINTING TRIANGLE
 ▽	9661	25BD WHITE DOWN-POINTING TRIANGLE
@@ -571,9 +567,9 @@ pg. 208 VISIT TO CALIFORNIA AND ARIZONA, 1887.
 <br>
 <hr>
 <hr>
-<a href="#20">About</a>
+<a  href="#20">About</a>
 
-<a href="#section1" style="float:left;text-align:left;position:fixed;left:5px;bottom:5px;font-size:1.2em;">&#9650</a>
+<a href="#section1" style="float:left;text-align:left;position:fixed;bottom:0px;left:5px;font-size:2em;">&#9650</a>
 <!--
 	9650	25B2	 	BLACK UP-POINTING TRIANGLE
 △	9651	25B3	 	WHITE UP-POINTING TRIANGLE
@@ -700,7 +696,7 @@ display:block;
 	<!--<img style=" max-width:50%; max-height:50%; margin-left:10%; " src="images/whlloyd/book/cover2.jpg">
 	-->
 	<!--images/history/resource-98-map.jpeg-->
-		<!--<div  style="position:absolute; top:0px; right:20%; float:right; text-align:right; max-width:70%; ">-->
+		<!--<div  style="position:absolute; top:0px; right:20%; float:right; text-align:right; max-width:70%; ">--><a name="top"></a> 
 <h1 style="display:inline-block;">A RAILWAY PIONEER</h1></div>	
 
 
