--- a/resource-library.html
+++ b/resource-library.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>  
 <html>  
 	<head> 
+		<h2 style="display:inline; position:fixed;top:0px;left:5px;z-index:25;">
+			<a style="color:gray;" href="index.html" title="Table of contents">&#9664</a></h2>	
 		<style>
 		
 		.test {
@@ -193,7 +195,7 @@ a:hover {
 
 <body>
 	
-	
+
 
 <div class="test one" ></div>
 	
