--- a/wh-lloyd.html
+++ b/wh-lloyd.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>  
 <html>  
 	<head> 
-		
+				<h2 style="display:inline; position:fixed;top:0px;left:5px;z-index:25;">
+			<a style="color:silver" href="resource-library.html" title="Resource Library">&#9664</a></h2>	
 
+
+
+<hr>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
