--- a/resource-library.html
+++ b/resource-library.html
@@ -245,6 +245,14 @@ Valparaíso, Chile - John Marsh</a><br>
 
 <a href="lloyd-railway.html">A Railway Pioneer. Notes by a Civil Engineer in Europe and America from 1838 to 1888. - W.H. Lloyd</a>
 
+<br>
+
+<a href="vitral-intro.html">Introducción del vitral en Chile. <!-- Protocolo de Registro, Intervención y Mantenimiento de Vitrales Patrimoniales-->
+- Consejo de Monumentos Nacionales de Chile</a>
+
+
+
+
 </span>
 	</div>
 
