--- a/resource-library.html
+++ b/resource-library.html
@@ -247,7 +247,7 @@ Valparaíso, Chile - John Marsh</a><br>
 
 <br>
 
-<a href="vitral-intro.html">Introducción del vitral en Chile. <!-- Protocolo de Registro, Intervención y Mantenimiento de Vitrales Patrimoniales-->
+<a href="vitral-intro.html">Introducción del vitral en Chile. - (Protocolo de Registro, Intervención y Mantenimiento de Vitrales Patrimoniales)
 - Consejo de Monumentos Nacionales de Chile</a>
 
 
