--- a/resource-library.html
+++ b/resource-library.html
@@ -249,8 +249,9 @@ Valparaíso, Chile - John Marsh</a><br>
 
 <a href="vitral-intro.html">Introducción del vitral en Chile. - (Protocolo de Registro, Intervención y Mantenimiento de Vitrales Patrimoniales)
 - Consejo de Monumentos Nacionales de Chile</a>
-
-
+<br>
+<a href="lorca.html">Iglesia Anglicana St.Paul's de Valparaíso (MH).
+Caso Inedito de Utilización de Madera Laminada en Chile en el S.XIX - Rodrigo Lorca Barros</a>
 
 
 </span>
