--- a/lorca.html
+++ b/lorca.html
@@ -669,7 +669,7 @@ clavada en un edificio del siglo XIX en
 Chile viene a sumar valor a una obra
 que es Monumento Histórico. De
 hecho la sitúa como una obra única
-en el mundo.
+en el mundo.<br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Si bien se trata de un caso aislado,
 refuerza el legado patrimonial de Valparaíso, subrayando el valor histórico
 de la ciudad en la medida que nos
