--- a/historical-information.html
+++ b/historical-information.html
@@ -837,8 +837,9 @@ http://cinetecavirtual.uchile.cl/cineteca/index.php/Detail/objects/2357">Documen
 		
 
 <br>
+<a href="https://youtu.be/WBuQ48myXaQ">... A Valparaíso (1963) - Joris Ivens</a>
 
-
+<br>
 		<br>
 
 Photographs by: 
