--- a/resource-library.html
+++ b/resource-library.html
@@ -252,7 +252,8 @@ Valparaíso, Chile - John Marsh</a><br>
 <br>
 <a href="lorca.html">Iglesia Anglicana St.Paul's de Valparaíso (MH).
 Caso Inedito de Utilización de Madera Laminada en Chile en el S.XIX - Rodrigo Lorca Barros</a>
-
+<br>
+<a href="anglo-chilean-community.html">The Anglo-Chilean Community by L.C. Derrick-Jehu</a>
 
 </span>
 	</div>
